<resources>
    <string name="app_name">Job Vacancy Validation</string>
    <string name="app_splash_name">VALICAT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hello_welcome_back">HELLO, \nWELCOME BACK</string>
    <string name="login_page_sub_title">Sign in to continue</string>
    <string name="login">Login</string>
    <string name="register_title">JOIN US!</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="register_sub_title">Fill your data below to start joining us</string>
    <string name="validation">Validation</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="about_us">About Us</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="test">Test</string>
    <string name="halo_janice_elizabeth">Halo, Janice Elizabeth</string>
    <string name="home_greetings">What’s on your mind today?</string>
    <string name="validation_sub_title">Fill In Job Vacancies</string>
    <string name="tab_1">My History</string>
    <string name="tab_2">Other User History</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="phone">phone</string>
    <string name="Phone">Phone</string>
    <string name="Name">name</string>
    <string name="bio">bio</string>
    <string name="Bio">Bio</string>
    <string name="Birthday">Birthday</string>
    <string name="birthday">birthday</string>
    <string name="Country">Country</string>
    <string name="country">country</string>
    <string name="update_profile">Update Profile</string>
    <string name="success_login">Successfully Login</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="logout_warning">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Log out</string>
    <string name="logout_dialog_title">Log Out</string>
    <string name="logout_dialog_message">Are you sure you want to logout?</string>
    <string name="empty_input_warning">Field is empty!</string>
    <string name="validation_negative_result">Fraud Job</string>
    <string name="validation_positive_result">Valid Job</string>
    <string name="validate">Validate</string>
    <string name="home_hint">Validate a job vacancy with VALICAT!</string>
    <string name="home_hint_description">Insert a job vacancy broadcast into the text field above and press the validate button to start the magic!</string>
    <string name="paste_button">Paste Button</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="paste_success">Field replaced from clipboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">VALICAT</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>