<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileEditActivity"
    android:background="@color/dark_grey">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/default_profile_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/changePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="16dp"
                android:text="@string/change_profile_photo"
                android:textColor="@color/light_blue"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/profile_image"
                app:layout_constraintStart_toStartOf="@+id/profile_image"
                app:layout_constraintTop_toBottomOf="@+id/profile_image" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/linlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/card"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/card">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textColor="@color/very_light_grey"
            android:textStyle="bold"
            android:paddingStart="4dp"/>

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Janice Elizabeth"
            android:textColor="@color/light_grey"
            app:backgroundTint="@color/very_light_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Bio"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textColor="@color/very_light_grey"
            android:textStyle="bold"
            android:paddingStart="4dp"/>

        <EditText
            android:id="@+id/edit_text_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            app:backgroundTint="@color/very_light_grey"
            android:text="I love anime and kpop :D"
            android:textColor="@color/light_grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Phone"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textColor="@color/very_light_grey"
            android:textStyle="bold"
            android:paddingStart="4dp"/>

        <EditText
            android:id="@+id/edit_text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            app:backgroundTint="@color/very_light_grey"
            android:text="+6281284555365"
            android:textColor="@color/light_grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Birthday"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textColor="@color/very_light_grey"
            android:textStyle="bold"
            android:paddingStart="4dp"  />

        <EditText
            android:id="@+id/edit_text_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            app:backgroundTint="@color/very_light_grey"
            android:text="January 1, 2000"
            android:textColor="@color/light_grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Country"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textColor="@color/very_light_grey"
            android:textStyle="bold"
            android:paddingStart="4dp"  />

        <EditText
            android:id="@+id/edit_text_nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            app:backgroundTint="@color/very_light_grey"
            android:text="Indonesia"
            android:textColor="@color/light_grey"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>