<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/parameter_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            app:boxBackgroundColor="@color/grey"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_parameter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:textColor="@color/light_grey"
                android:textColorHint="@color/light_grey"
                android:gravity="start"
                app:hintTextColor="@color/light_grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/paste_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_paste_button"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/paste_button"/>

    </RelativeLayout>

    <Button
        android:id="@+id/validate_button"
        style="@style/Widget.Material3.Button"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/validate"
        app:layout_constraintTop_toBottomOf="@id/rellay1"
        app:layout_constraintStart_toStartOf="@id/rellay1"
        app:layout_constraintEnd_toEndOf="@id/rellay1"/>

    <TextView
        android:id="@+id/home_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_hint"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/light_grey"
        android:gravity="center_horizontal|top"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintTop_toBottomOf="@id/validate_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_hint_description"
        android:textSize="18sp"
        android:textColor="@color/light_grey"
        android:gravity="fill_horizontal"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintTop_toBottomOf="@id/home_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp" />

    <ProgressBar
        android:id="@+id/pb_validation"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/validate_button"
        app:layout_constraintEnd_toEndOf="@+id/validate_button"
        app:layout_constraintStart_toStartOf="@+id/validate_button"
        app:layout_constraintTop_toTopOf="@+id/validate_button" />


</androidx.constraintlayout.widget.ConstraintLayout>